# brent_crude_prices

./: ANALYSIS.md  README.md  brent_crude_prices.ipynb  exploratory_data_analysis.ipynb  lstm_brent_crude_prices.ipynb  other_models_brent_crude_prices.ipynb  pyproject.toml  requirements.txt
data/: dataset_transformed.csv
