[tool.poetry]
name = "brent-crude-prices"
version = "0.1.0"
description = "Forecasting Brent Crude Oil Prices using LSTMS and other ML models"
authors = ["xavsant <xavierboons2021@economics.smu.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
numpy = "2.0.2"
tensorflow = "^2.18.0"
keras = "^3.7.0"
scikit-learn = "^1.6.0"
notebook = "^7.3.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
